Update workflow actions (#1950)
* Update workflow actions

* Checkout code before setting up go

--- a/.github/workflows/test_HORNET.yml
+++ b/.github/workflows/test_HORNET.yml
@@ -14,11 +14,14 @@ jobs:
     name: Test HORNET
     runs-on: self-hosted
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
+
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
-        id: go
+          go-version-file: 'go.mod'
+          cache: false
 
       - name: Print Go version
         run: go version
@@ -26,11 +29,8 @@ jobs:
       - name: Install Build Essential
         run: sudo apt update && sudo apt install build-essential -y
 
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
-
       - name: Test HORNET
-        uses: nick-invision/retry@v2
+        uses: nick-invision/retry@v3
         with:
           timeout_minutes: 5
           max_attempts: 3
