--- a/.github/workflows/build_HORNET.yml
+++ b/.github/workflows/build_HORNET.yml
@@ -14,17 +14,17 @@ jobs:
     name: Build HORNET
     runs-on: self-hosted
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
+
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
-        id: go
+          go-version-file: 'go.mod'
+          cache: false
 
       - name: Print Go version
         run: go version
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
 
       - name: Build HORNET
         run: go build -v .
