--- a/.github/workflows/gendoc.yml
+++ b/.github/workflows/gendoc.yml
@@ -9,24 +9,24 @@ jobs:
   gendoc:
     runs-on: self-hosted
     steps:
+      - name: Check out code into the Go module directory
+        uses: actions/checkout@v4
+
       - name: Set up Go
-        uses: actions/setup-go@v4
+        uses: actions/setup-go@v5
         with:
-          go-version: "1.21"
-        id: go
+          go-version-file: 'go.mod'
+          cache: false
 
       - name: Print Go version
         run: go version
-
-      - name: Check out code into the Go module directory
-        uses: actions/checkout@v3
 
       - name: Run gendoc
         working-directory: tools/gendoc
         run: go mod tidy && go run main.go
 
       - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v5
+        uses: peter-evans/create-pull-request@v6
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           title: "chore(gendoc): update docs"
